--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   min-width: 100%;
   min-height: 100vh;
   background-color: #f9f9f9;
+  overflow-x: hidden;
 }
 
 #root {
@@ -140,6 +141,7 @@ button:focus-visible {
 
 /* Add this to your existing CSS */
 .sticky-tabs {
+  /* overflow-x: hidden; */
   position: sticky;
   top: 0;
   z-index: 40;
