--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -99,6 +99,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
 
 
 /* Add this at the end of the file */
