--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.1em 1.1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -87,58 +87,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
- */
-
-
 /* Add this at the end of the file */
 .sticky-container {
   position: relative;
   z-index: 30;
 }
-
-
-/*
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 
 /* Add this to your existing CSS */
 .sticky-tabs {
@@ -161,4 +114,15 @@ button:focus-visible {
 
 .read-the-docs {
   color: #888;
+}
+
+@keyframes pulseOut {
+  0% {
+    transform: scale(0.6);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity:0;
+  }
 }
